# rogii

./: .gitignore  README.md  pyproject.toml
configs/experiment/: baseline_anchor.yaml  baseline_surface_anchor.yaml  linear_surface.yaml  linear_tvt.yaml  pf_16seed.yaml  pf_16seed_seed43.yaml  pf_2x16seed.yaml  pf_trend_blend.yaml  public_physics_gate.yaml  public_residual_gate.yaml  public_robust_blend_gate.yaml  public_verified_blend_gate.yaml  quadratic_surface.yaml  quadratic_tvt.yaml  stage10_multiscale_alignment.yaml  stage10b_tail_safe_alignment.yaml  stage11_multicut_delta_u.yaml  stage11c_delta_u_robust_gate.yaml  stage12a_raw_ncc_benchmark.yaml  stage12b_learned_emission_tcn.yaml  stage12c_spatial_kbest_lattice.yaml  stage13_emission_uncertainty_gate.yaml  stage14_crossfit_emission_residual.yaml  stage14b_extended_residual_gate.yaml  stage15_fold_safe_package.yaml  stage16a_frontier_diff.yaml  stage16b_testlike_validation.yaml  stage17_public_replay.yaml  stage17b_selector_replay.yaml  stage17c_selector_gate.yaml  stage17d_selector_resolution.yaml  stage18a_branch_retrieval.yaml  stage18b_branch_confirmation.yaml  stage18c_all_cut_branch_retrieval.yaml  stage18d_learned_donor_ranker.yaml  stage19a_trajectory_residual.yaml  stage19b_trajectory_package.yaml  stage20a_top_pf_alignment.yaml  stage20b_disjoint_confirmation.yaml  stage21a_prefix_router.yaml  (+32 more)
docs/: branch_overlap_6594_safe.md  colab_workflow.md  competition_data_ja.md  competition_overview_ja.md  competition_rules_ja.md  frontier_safe_6858.md  stage10_multiscale_alignment.md  stage10b_tail_safe_alignment.md  stage10c_kaggle_integration.md  stage11_multicut_delta_u.md  stage11c_delta_u_robust_gate.md  stage12a_raw_ncc_benchmark.md  stage12b_learned_emission_tcn.md  stage12c_spatial_kbest_lattice.md  stage13_emission_uncertainty_gate.md  stage14_crossfit_emission_residual.md  stage14b_extended_residual_gate.md  stage1_results.md  stage2_results.md  stage3_results.md  stage4_results.md  stage5_results.md  stage6_public_mha_safe.md  stage6_results.md  stage7_public_residual_gate.md  stage7b_public_physics_gate.md  stage7c_public_package_audit.md  stage7d_public_verified_blend.md  stage7e_public_robust_blend.md  stage7f_kaggle_public_blend.md  stage8_safe_cutback_gate.md  stage8b_conditional_well_gate.md  stage9_residual_tcn.md  submission_workflow.md  top_pf_649_safe.md  v599_frontier_safe_6768.md
docs/discussion/: 694973_how-to-get-started-competition-s-official-discord.md  697300_some-question.md  697329_submission-scoring-error-is-the-scorer-live-yet.md  697400_edit-dataset-issue-fixed.md  697406_geological-formations-on-well-geology-region-texas.md  697500_coding-platform.md  (+128 more)
notebooks/: 00_colab_setup.ipynb  100_colab_public_residual_gate.ipynb  10_run_anchor_baseline.ipynb  110_colab_public_physics_gate.ipynb  120_colab_public_package_audit.ipynb  130_colab_public_verified_blend_gate.ipynb  140_colab_public_robust_blend_gate.ipynb  150_kaggle_public_robust_blend.ipynb  160_run_stage8_safe_cutback_gate.ipynb  170_run_stage8b_conditional_well_gate.ipynb  180_run_stage9_residual_tcn.ipynb  190_run_stage10_multiscale_alignment.ipynb  200_run_stage10b_tail_safe_alignment.ipynb  20_run_stage1_trends.ipynb  210_kaggle_public_mha_stage10c.ipynb  220_kaggle_public_frontier_safe.ipynb  230_kaggle_v599_a130_frontier_safe.ipynb  240_kaggle_branch_overlap_6594_safe.ipynb  250_run_stage11_multicut_delta_u.ipynb  260_run_stage11c_delta_u_robust_gate.ipynb  270_run_stage12a_raw_ncc_benchmark.ipynb  280_run_stage12b_learned_emission_tcn.ipynb  290_run_stage12c_spatial_kbest_lattice.ipynb  300_run_stage13_emission_uncertainty_gate.ipynb  30_run_stage2_pf.ipynb  310_run_stage14_crossfit_emission_residual.ipynb  320_run_stage14b_extended_residual_gate.ipynb  330_build_stage15_fold_safe_package.ipynb  340_kaggle_stage15_internet_off_inference.ipynb  350_run_stage16a_frontier_diff.ipynb  360_run_stage16b_testlike_validation.ipynb  370_run_stage17_public_replay.ipynb  380_run_stage17b_selector_replay.ipynb  390_run_stage17c_selector_gate.ipynb  400_run_stage17d_selector_resolution.ipynb  40_run_stage3_residual.ipynb  410_run_stage18a_branch_retrieval.ipynb  420_run_stage18b_branch_confirmation.ipynb  430_run_stage18c_all_cut_branch_retrieval.ipynb  440_run_stage18d_learned_donor_ranker.ipynb  (+37 more)
scripts/: archive_kaggle_discussions.py  build_public_mha_safe_notebook.py  build_stage18e_kaggle_notebook.py  build_stage19a_notebook.py  build_stage19b_notebook.py  build_stage19c_notebooks.py  build_stage20a_notebook.py  build_stage20b_notebook.py  build_stage21a_notebook.py  build_stage21b_notebook.py  build_stage22a_notebook.py  build_stage23a_notebook.py  build_stage23b_notebook.py  build_stage23c_notebook.py  build_stage23d_notebook.py  build_stage24a_notebook.py  build_stage25a_notebook.py  build_stage26a_notebook.py  build_stage7f_kaggle_notebook.py  build_stage8_notebook.py  build_stage8b_notebook.py  build_stage9_notebook.py  build_top_pf_649_safe_notebook.py
tests/: test_alignment_gate.py  test_branch_overlap_6594_safe_notebook.py  test_delta_u_gate.py  test_emission_lattice.py  test_emission_residual.py  test_emission_residual_gate.py  test_emission_tcn.py  test_emission_uncertainty.py  test_folds.py  test_frontier_safe_notebook.py  test_metrics.py  test_multicut_delta_u.py  test_multiscale_alignment.py  test_particle_filter.py  test_public_blend.py  test_public_mha_safe_notebook.py  test_public_package_audit.py  test_public_physics.py  test_public_residual.py  test_raw_ncc.py  test_residual_sequence.py  test_safe_cutback.py  test_schema_and_anchor.py  test_sequence_features.py  test_spatial.py  test_stage10c_kaggle_notebook.py  test_stage11_delta_u_cli.py  test_stage11_notebook.py  test_stage11c_notebook.py  test_stage12a_notebook.py  test_stage12b_notebook.py  test_stage12c_notebook.py  test_stage13_notebook.py  test_stage14_notebook.py  test_stage14b_notebook.py  test_stage15_inference.py  test_stage16a_frontier_diff.py  test_stage16b_testlike_validation.py  test_stage17_public_replay.py  test_stage17b_selector_replay.py  (+41 more)
(+267 files in other folders)
