[project]
name = "rogii-wellbore"
version = "0.1.0"
description = "Reproducible experiments for the ROGII Wellbore Geology Prediction competition"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=2.0,<2.1",
    "numba>=0.61,<0.64",
    "pandas>=2.2,<3",
    "pyarrow>=18,<24",
    "pyyaml>=6,<7",
    "scikit-learn>=1.6,<2",
]

[dependency-groups]
archive = ["kaggle>=2.2.0,<3"]
dev = ["pytest>=8,<10"]

[project.scripts]
rogii-prepare = "rogii.cli.prepare:main"
rogii-train = "rogii.cli.train:main"
rogii-evaluate = "rogii.cli.evaluate:main"
rogii-compare = "rogii.cli.compare:main"
rogii-residual = "rogii.cli.residual:main"
rogii-stage4 = "rogii.cli.stage4:main"
rogii-spatial = "rogii.cli.spatial:main"
rogii-submit = "rogii.cli.submit:main"
rogii-mha = "rogii.cli.mha:main"
rogii-public-oof = "rogii.cli.public_oof:main"
rogii-public-physics = "rogii.cli.public_physics:main"
rogii-public-package-audit = "rogii.cli.public_package_audit:main"
rogii-public-blend = "rogii.cli.public_blend:main"
rogii-safe-cutback = "rogii.cli.safe_cutback:main"
rogii-well-gate = "rogii.cli.well_gate:main"
rogii-sequence = "rogii.cli.sequence:main"
rogii-alignment = "rogii.cli.alignment:main"
rogii-alignment-gate = "rogii.cli.alignment_gate:main"
rogii-delta-u = "rogii.cli.delta_u:main"
rogii-delta-u-gate = "rogii.cli.delta_u_gate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rogii"]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
pythonpath = ["src"]
testpaths = ["tests"]
