[project]
name = "rogii-wellbore"
version = "0.1.0"
description = "Reproducible experiments for the ROGII Wellbore Geology Prediction competition"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=2.0,<2.1",
    "numba>=0.61,<0.64",
    "pandas>=2.2,<3",
    "pyarrow>=18,<24",
    "pyyaml>=6,<7",
    "scikit-learn>=1.6,<2",
]

[dependency-groups]
archive = ["kaggle>=2.2.0,<3"]
dev = ["pytest>=8,<10"]

[project.scripts]
rogii-prepare = "rogii.cli.prepare:main"
rogii-train = "rogii.cli.train:main"
rogii-evaluate = "rogii.cli.evaluate:main"
rogii-compare = "rogii.cli.compare:main"
rogii-residual = "rogii.cli.residual:main"
rogii-stage4 = "rogii.cli.stage4:main"
rogii-spatial = "rogii.cli.spatial:main"
rogii-submit = "rogii.cli.submit:main"
rogii-mha = "rogii.cli.mha:main"
rogii-public-oof = "rogii.cli.public_oof:main"
rogii-public-physics = "rogii.cli.public_physics:main"
rogii-public-package-audit = "rogii.cli.public_package_audit:main"
rogii-public-blend = "rogii.cli.public_blend:main"
rogii-safe-cutback = "rogii.cli.safe_cutback:main"
rogii-well-gate = "rogii.cli.well_gate:main"
rogii-sequence = "rogii.cli.sequence:main"
rogii-alignment = "rogii.cli.alignment:main"
rogii-alignment-gate = "rogii.cli.alignment_gate:main"
rogii-delta-u = "rogii.cli.delta_u:main"
rogii-delta-u-gate = "rogii.cli.delta_u_gate:main"
rogii-raw-ncc = "rogii.cli.raw_ncc:main"
rogii-emission-tcn = "rogii.cli.emission_tcn:main"
rogii-emission-lattice = "rogii.cli.emission_lattice:main"
rogii-emission-uncertainty = "rogii.cli.emission_uncertainty:main"
rogii-emission-residual = "rogii.cli.emission_residual:main"
rogii-emission-residual-gate = "rogii.cli.emission_residual_gate:main"
rogii-stage15-package = "rogii.cli.stage15_package:main"
rogii-stage15-infer = "rogii.cli.stage15_infer:main"
rogii-frontier-diff = "rogii.cli.frontier_diff:main"
rogii-testlike-validation = "rogii.cli.testlike_validation:main"
rogii-public-replay = "rogii.cli.public_replay:main"
rogii-selector-replay = "rogii.cli.selector_replay:main"
rogii-selector-gate = "rogii.cli.selector_gate:main"
rogii-selector-resolution = "rogii.cli.selector_resolution:main"
rogii-branch-retrieval = "rogii.cli.branch_retrieval:main"
rogii-donor-ranker = "rogii.cli.donor_ranker:main"
rogii-stage18-package = "rogii.cli.stage18_package:main"
rogii-trajectory-residual = "rogii.cli.trajectory_residual:main"
rogii-trajectory-package = "rogii.cli.trajectory_package:main"
rogii-trajectory-inference-package = "rogii.cli.trajectory_inference_package:main"
rogii-trajectory-base-alignment = "rogii.cli.trajectory_base_alignment:main"
rogii-prefix-router = "rogii.cli.prefix_router:main"
rogii-prefix-confidence = "rogii.cli.prefix_confidence:main"
rogii-prefix-residual-field = "rogii.cli.prefix_residual_field:main"
rogii-strong-base-ncc = "rogii.cli.strong_base_ncc:main"
rogii-strong-base-emission = "rogii.cli.strong_base_emission:main"
rogii-emission-decoder = "rogii.cli.emission_decoder:main"
rogii-emission-hierarchical-decoder = "rogii.cli.emission_hierarchical_decoder:main"
rogii-scaled-emission-manifest = "rogii.cli.scaled_emission_manifest:main"
rogii-emission-path-decoder = "rogii.cli.emission_path_decoder:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rogii"]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
pythonpath = ["src"]
testpaths = ["tests"]
